chore: fix padding and add grid gap

--- a/app/styles/shareView.module.css
+++ b/app/styles/shareView.module.css
@@ -1,12 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  grid-gap: 28px;
+  padding: 1rem 4rem;
+  grid-gap: 3rem;
 }
 
 .cardsContainer {
   display: grid;
+  grid-gap: 1.5rem;
 }
 
 .title {
